--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/relativeLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -12,114 +13,121 @@
         android:id="@+id/inputName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_margin="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         android:ems="10"
+        android:hint="Enter your name"
         android:inputType="textPersonName"
-        android:text="Enter Your Name" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"  />
+
 
 
     <TextView
         android:id="@+id/topping"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/inputName"
-        android:layout_alignParentLeft="true"
-        android:text="TOPPING" />
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:text="TOPPING"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/inputName" />
 
     <CheckBox
         android:id="@+id/whippedCream"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/topping"
-        android:layout_alignParentRight="true"
-        android:layout_margin="8dp"
-        android:text="Whipped Cream" />
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="Whipped Cream"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/topping" />
 
     <CheckBox
         android:id="@+id/chocolate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/whippedCream"
-        android:layout_alignParentRight="true"
-        android:layout_margin="8dp"
-        android:text="Chocolate" />
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="Chocolate"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/whippedCream" />
 
 
     <TextView
         android:id="@+id/quantity"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/chocolate"
-        android:layout_alignParentLeft="true"
-        android:layout_margin="8dp"
-        android:text="QUANTITY" />
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:text="QUANTITY"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/lessButton" />
 
     <Button
         android:id="@+id/lessButton"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_alignBottom="@id/numeroQuantity"
-        android:layout_toLeftOf="@id/numeroQuantity"
-        android:layout_weight="1"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:layout_gravity="center"
+        android:layout_marginRight="8dp"
         android:paddingTop="4dp"
-        android:text="-" />
+        android:text="-"
+        app:layout_constraintBottom_toBottomOf="@id/numeroQuantity"
+        app:layout_constraintRight_toLeftOf="@id/numeroQuantity" />
 
     <TextView
         android:id="@+id/numeroQuantity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:layout_margin="16dp"
-        android:layout_weight="1"
+        android:paddingBottom="12dp"
         android:text="2"
-
-        />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"  />
 
     <Button
         android:id="@+id/plusButton"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_alignBottom="@id/numeroQuantity"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:layout_gravity="center"
-        android:layout_toRightOf="@id/numeroQuantity"
-        android:layout_weight="1"
+        android:layout_marginLeft="8dp"
         android:paddingTop="4dp"
         android:text="+"
-
-        />
+        app:layout_constraintBottom_toBottomOf="@id/numeroQuantity"
+        app:layout_constraintLeft_toRightOf="@id/numeroQuantity" />
 
     <TextView
         android:id="@+id/summary"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         android:text="ORDER SUMMARY"
-        android:layout_centerInParent="true"
-        android:layout_gravity="center"
-        android:paddingBottom="8dp"
-        android:layout_alignParentLeft="true"
-        android:layout_above="@id/orderButton"
-        />
-
-    <TextView
-        android:id="@+id/textHidden"
-        android:layout_width="match_parent"
-        android:layout_margin="8dp"
-        android:layout_height="62dp"
-        />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/orderButton"
+         />
 
     <Button
         android:id="@+id/orderButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
         android:text="ORDER"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentBottom="true"
-        />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"  />
 
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
