--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,15 +15,16 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:text="Button"
+        android:text="@string/button_label_toast"
         android:background="@color/colorPrimary"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:onClick="showToast"/>
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/show_count"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="8dp"
@@ -34,7 +35,7 @@
         android:layout_marginBottom="8dp"
         android:background="#FFFF00"
         android:gravity="center_vertical"
-        android:text="0"
+        android:text="@string/count_initial_value"
         android:textAlignment="center"
         android:textSize="160sp"
         android:textStyle="bold"
@@ -52,12 +53,13 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginBottom="8dp"
-        android:text="Button"
+        android:text="@string/button_label_count"
         android:background="@color/colorPrimary"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        android:onClick="countUp"/>
 
 
 
