--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,68 +18,64 @@
         android:hint="@string/hint"
         android:inputType="textPersonName"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"  />
-
+        app:layout_constraintTop_toTopOf="parent" />
 
 
     <TextView
         android:id="@+id/topping"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginTop="24dp"
         android:text="@string/topping"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/inputName" />
-
-    <CheckBox
-        android:id="@+id/whippedCream"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:text="@string/whipped_cream"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/topping"
-        android:layout_marginLeft="8dp" />
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />
 
     <CheckBox
         android:id="@+id/chocolate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="4dp"
         android:text="@string/chocolate"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/whippedCream"
-        android:layout_marginLeft="8dp" />
+        app:layout_constraintTop_toBottomOf="@id/whippedCream" />
+
+    <CheckBox
+        android:id="@+id/whippedCream"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="16dp"
+        android:text="@string/whipped_cream"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/topping" />
 
 
     <TextView
         android:id="@+id/quantity"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginBottom="4dp"
         android:text="@string/quantity"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/lessButton" />
+        app:layout_constraintBottom_toTopOf="@id/lessButton"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <Button
-        android:id="@+id/lessButton"
+        android:id="@+id/plusButton"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_gravity="center"
-        android:layout_marginRight="8dp"
+        android:layout_marginLeft="8dp"
+        android:onClick="countUp"
         android:paddingTop="4dp"
-        android:text="@string/less"
-        android:onClick="countDown"
+        android:text="@string/plus"
         app:layout_constraintBottom_toBottomOf="@id/numeroQuantity"
-        app:layout_constraintRight_toLeftOf="@id/numeroQuantity" />
+        app:layout_constraintLeft_toRightOf="@id/numeroQuantity" />
 
     <TextView
         android:id="@+id/numeroQuantity"
@@ -89,21 +85,23 @@
         android:text="@string/cantidad"
 
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"  />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.616" />
 
     <Button
-        android:id="@+id/plusButton"
+        android:id="@+id/lessButton"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_gravity="center"
-        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:onClick="countDown"
         android:paddingTop="4dp"
-        android:onClick="countUp"
-        android:text="@string/plus"
+        android:text="@string/less"
         app:layout_constraintBottom_toBottomOf="@id/numeroQuantity"
-        app:layout_constraintLeft_toRightOf="@id/numeroQuantity" />
+        app:layout_constraintRight_toLeftOf="@id/numeroQuantity" />
 
     <Button
         android:id="@+id/orderButton"
@@ -113,11 +111,21 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
-        android:text="@string/order"
         android:onClick="makeOrder"
+        android:text="@string/order"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"  />
+        app:layout_constraintRight_toRightOf="parent" />
+
+    <EditText
+        android:id="@+id/editTextTextEmailAddress"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="textEmailAddress"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/inputName" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
