--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -2,8 +2,19 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/prueba"
-        android:title="prueba"
+        android:id="@+id/shoppingCart"
+        android:title="Comprar"
+        android:orderInCategory="10"
         app:showAsAction="always"
+        android:icon="@drawable/ic_shopping_cart"
+
+        />
+
+    <item
+        android:id="@+id/reset"
+        android:title="prueba"
+        android:orderInCategory="20"
+        app:showAsAction="always"
+        android:icon="@drawable/ic_trash_can_delete"
         />
 </menu>
